--- a/order/pages/orders.ejs
+++ b/order/pages/orders.ejs
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 <head>
-    <title>Orders</title>
-    <style>
-        body { font-family: Arial, sans-serif; }
-        .order { border: 1px solid #ccc; padding: 10px; margin: 10px; }
-    </style>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orders | Multiservice E-commerce App</title>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <h1>Orders</h1>
-    <% orders.forEach(order => { %>
-        <div class="order">
-            <h2>Order ID: <%= order.id %></h2>
-            <p>Product ID: <%= order.productId %></p>
-            <p>Quantity: <%= order.quantity %></p>
+    <div class="wrapper">
+        <h1>All Orders</h1>
+        <div class="item-container">
+            <% orders.forEach(order => { %>
+                <div class="item">
+                    <h2>Order ID: <%= order.id %></h2>
+                    <p>Product ID: <%= order.productId %></p>
+                    <p>Product: <%= order.product %></p>
+                    <p>Quantity: <%= order.quantity %></p>
+                    <p>Buyer: <%= order.buyer %></p>
+                </div>
+            <% }) %>
         </div>
-    <% }) %>
+    </div>
 </body>
 </html>
